Right align fix on artwork page.
It is happening on all browsers and it is solely because the Helmar
Pharoh’s Choice Cabinet  <li> is taller than the other <li>, because
the title is two lines instead of one like the others.

To fix it I added min-height: 2.2em to the .work-list li .title class.
Since the line height is set to 1.1em by setting the height to 2.2em I
guaranteed that all the titles would be at lease 2 lines tall. This
made them uniform.

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -354,7 +354,7 @@ nav #nav > li ul a:hover {
   float: left;
   width: 220px;
   margin-left: 20px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 .feature li .thumb,
 .work-list li .thumb {
@@ -426,6 +426,8 @@ nav #nav > li ul a:hover {
   color: #6b3b25;
   text-shadow: 0px 1px 0 rgba(255, 255, 255, 0.5);
   text-decoration: none;
+  display:block;
+  min-height:2.2em;
 }
 .feature li .categories,
 .work-list li .categories {
